--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,16 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^3.2.0
   firebase_auth: ^5.1.2
-  firebase_database: ^11.0.3
+  firebase_messaging: ^15.0.3
+  dio: ^5.5.0+1
+  flutter_callkit_incoming: ^2.0.4+1
+  uuid: ^4.4.2
+  agora_rtc_engine: ^6.3.2
+  permission_handler: ^11.3.1
+  cloud_firestore: ^5.1.0
   get: ^4.6.6
+  get_storage: ^2.1.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
